--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Shane Stewart's Portfolio</title>
-        <link rel="stylesheet" href="assets/css/style.css">        
+        <link rel="stylesheet" href="./Assets/CSS/style.css">        
     </head>
     <body>
        <!--Navigation-->
@@ -112,10 +112,10 @@
                     </div>
                     <div class="work-grid-item blog">
                         <h3>
-                            <a href="https://www.maggiestewartwrites.com/">Maggie Stewart Writes</a>
+                            <a href="https://shanestewart4.github.io/Ideal-Meal/">Group Project 1 - Ideal Meal</a>
                         </h3>
                         <h4>
-                            Built using WIX.
+                            Built using HTML, CSS and JavaScript. APIs were implemented as well.
                         </h4>
                     </div>
 
