update with project 2

--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@
             <div class="work-grid-wrapper">
                 <div class="work-grid-container">
                     <!--headers-->
-                    <div class="work-grid-item runbuddy">
+                    <div class="work-grid-item victors">
+                        <h3>
+                            <a href="https://victorscardealership.herokuapp.com/">Victor's Car Dealership</a>
+                        </h3>
+                        <h4>
+                            Built for Vanderbilt University's Full-Stack Coding Bootcamp using JavaScript, Node.Js, Express.Js, MySQL2, Sequelize, Handlebars, bcrypt, Bootstrap, dotenv, Heroku,  & nodemon.
+                        </h4>
+                    </div>
+                    <!-- <div class="work-grid-item runbuddy">
                         <h3>
                             <a href="https://shanestewart4.github.io/run-buddy/">Run Buddy</a> 
                         </h3>
@@ -75,7 +83,7 @@
                             Built with HTML & CSS.
                         </h4>
             
-                    </div>
+                    </div> -->
                     <div class="work-grid-item effishent">
                         <h3>
                             <a href="https://www.effishent.us/">Effishent</a>
@@ -84,6 +92,8 @@
                             Built using WIX.
                         </h4>
                     </div>
+
+                    
 
                     <!--body-->
                     <div class="work-grid-item detailing">
