updated with artist store

--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
             <div class="work-grid-wrapper">
                 <div class="work-grid-container">
                     <!--headers-->
+                    <div class="work-grid-item artist-store">
+                        <h3>
+                            <a href="https://github.com/vloriandervishi/artist-store">Artist/Painting Search Engine</a>
+                        </h3>
+                        <h4>
+                            MERN stack application built for Vanderbilt University's Full-Stack Coding Bootcamp.
+                        </h4>
+                    </div>
                     <div class="work-grid-item victors">
                         <h3>
                             <a href="https://victorscardealership.herokuapp.com/">Victor's Car Dealership</a>
