updated with artist store

--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
                             Built using WIX.
                         </h4>
                     </div>
-                    <div class="work-grid-item clanton">
+                    <!-- <div class="work-grid-item clanton">
                         <h3>
                             <a href="https://www.sarahclanton.com/">Sarah Clanton</a>
                         </h3>
                         <h4>
                             Built using Squarespace.
                         </h4>
-                    </div>
+                    </div> -->
                     <div class="work-grid-item schueler">
                         <h3>
                             <a href="https://www.faithschueler.com/">Faith Schueler</a>
